...
            android:contentDescription="@string/user_avatar"
            android:src="@drawable/ic_avatar_placeholder" />
    </com.google.android.material.appbar.MaterialToolbar>

    <!-- RecyclerView for the Job List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/jobRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

...
